@@ -23,35 +23,38 @@
 		<LogFile type="string">logs/adchpp%Y%m.log</LogFile>
 
 <!-- Advanced connection settings (don't change unless you at least think you know what you're doing) -->
+
 		<!-- Maximum send size, changes how much data is sent at most to a single user per
 			 call to the socket api. Experiment with this, lower settings might be more fair
 			 in the distribution of available bandwidth at the cost of network/cpu efficiency.
 			 Don't set below 256, 0 = disable. Experiment with this, it has many strange effects! -->
+		<!-- TODO this setting is currently ignored.
 		<MaxSendSize type="int">1400</MaxSendSize>
+		-->
 
-		<MaxBufferSize type="int">16384</MaxBufferSize>
-		<BufferSize type="int">256</BufferSize>
 		<MaxCommandSize type="int">16384</MaxCommandSize>
-		<!-- Milliseconds before a user is disconnected when his/her outgoing buffer
-			 becomes larger than MaxRecvSize (outgoing buffer overflow). -->
-		<OverflowTimeout type="int">60000</OverflowTimeout>
-
-		<!-- Try to keep slow users from overflowing by not sending searches to them
-			 when they're in the overflow state -->
-		<KeepSlowUsers type="int">1</KeepSlowUsers>
 
 		<!-- Buffer size, this is the minimum buffer size that is initially assigned to
 			 each user. Larger buffer = more memory usage / user, less = a little bit
 			 slower performance if the user sends more than these many bytes at a time
 			 (in a chat message for instance...). Don't set to lower than 256. -->
-		<BufferSize type="int">512</BufferSize>
-		
+		<BufferSize type="int">1024</BufferSize>
+		<MaxBufferSize type="int">16384</MaxBufferSize>
+
+		<!-- Milliseconds before a user is disconnected when his/her outgoing buffer
+			 becomes larger than MaxRecvSize (outgoing buffer overflow). -->
+		<OverflowTimeout type="int">60000</OverflowTimeout>
+
 		<!-- Timeout (ms) before ADCH++ stops trying to empty its send buffer for a user
 			 (to send a kick message for example), and disconnects him/her. -->
-		<DisconnectTimeout>10000</DisconnectTimeout>
-		<LoginTimeout>30</LoginTimeout>
+		<!-- TODO this setting is currently ignored.
+		<DisconnectTimeout>5000</DisconnectTimeout>
+		-->
+
+		<!-- Timeout (ms) before disconnecting users whose login process is taking too long. -->
+		<LogTimeout>10000</LogTimeout>
 	</Settings>
-	
+
 	<Servers>
 		<!--
 		One <Server> tag per listening connection.
